<resources>
    <string name="app_name">MAHURI</string>
    <string name="connection_test">Connection Test</string>
    <string name="up">up</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="stop">STOP</string>
    <string name="listen">Listen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="habitaci_n">Habitación</string>
    <string name="salon">Salon</string>
    <string name="cocina">Cocina</string>
    <string name="MIC">mic</string>
</resources>