<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ControlPadFragment">

    <FrameLayout
        android:layout_width="223dp"
        android:layout_height="196dp"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/upButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:contentDescription="@string/up_arrow"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_arrow_up" />

        <ImageButton
            android:id="@+id/letfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:contentDescription="@string/left_arrow"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_arrow_left"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/downButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/down_arrow"
            app:srcCompat="@drawable/ic_baseline_arrow_down" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:contentDescription="@string/right_arrow"
            app:srcCompat="@drawable/ic_baseline_arrow_right"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/botonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center"
            android:text="@string/stop" />
    </FrameLayout>

</FrameLayout>